tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00029.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00029.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "x", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 1 : s32i
    store %3, %1, align 4
    %4 = load %1 : s32i, align 4
    %5 = const 3 : s32i
    %6 = xor %4, %5 : s32i
    store %6, %1, align 4
    %7 = load %1 : s32i, align 4
    %8 = const 2 : s32i
    %9 = sub %7, %8 : s32i [nsw]
    store %9, %0
    %10 = load %0 : s32i
    return %10
}
