tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00030.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00030.c" (c, x86_64-unknown-linux-gnu)
fn f() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %40 = alloca s32i, "__retval", align 4
    %41 = const 100 : s32i
    store %41, %40
    %42 = load %40 : s32i
    return %42
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %34 = get_global @f : (() -> s32i)*
        %35 = call @f() : s32i [all]
        %36 = const 1000 : s32i
        %37 = cmp gt %35, %36 : bool
        if %37 {
            %38 = const 1 : s32i
            store %38, %0
            %39 = load %0 : s32i
            return %39
        }
        yield
    }
    scope {
        %28 = get_global @f : (() -> s32i)*
        %29 = call @f() : s32i [all]
        %30 = const 1000 : s32i
        %31 = cmp ge %29, %30 : bool
        if %31 {
            %32 = const 1 : s32i
            store %32, %0
            %33 = load %0 : s32i
            return %33
        }
        yield
    }
    scope {
        %22 = const 1000 : s32i
        %23 = get_global @f : (() -> s32i)*
        %24 = call @f() : s32i [all]
        %25 = cmp lt %22, %24 : bool
        if %25 {
            %26 = const 1 : s32i
            store %26, %0
            %27 = load %0 : s32i
            return %27
        }
        yield
    }
    scope {
        %16 = const 1000 : s32i
        %17 = get_global @f : (() -> s32i)*
        %18 = call @f() : s32i [all]
        %19 = cmp le %16, %18 : bool
        if %19 {
            %20 = const 1 : s32i
            store %20, %0
            %21 = load %0 : s32i
            return %21
        }
        yield
    }
    scope {
        %10 = const 1000 : s32i
        %11 = get_global @f : (() -> s32i)*
        %12 = call @f() : s32i [all]
        %13 = cmp eq %10, %12 : bool
        if %13 {
            %14 = const 1 : s32i
            store %14, %0
            %15 = load %0 : s32i
            return %15
        }
        yield
    }
    scope {
        %4 = const 100 : s32i
        %5 = get_global @f : (() -> s32i)*
        %6 = call @f() : s32i [all]
        %7 = cmp ne %4, %6 : bool
        if %7 {
            %8 = const 1 : s32i
            store %8, %0
            %9 = load %0 : s32i
            return %9
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
