tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00031.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00031.c" (c, x86_64-unknown-linux-gnu)
fn zero() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %65 = alloca s32i, "__retval", align 4
    %66 = const 0 : s32i
    store %66, %65
    %67 = load %65 : s32i
    return %67
}
fn one() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %62 = alloca s32i, "__retval", align 4
    %63 = const 1 : s32i
    store %63, %62
    %64 = load %62 : s32i
    return %64
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "x", align 4
    %2 = alloca s32i, "y", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = get_global @zero : (() -> s32i)*
    %5 = call @zero() : s32i [all]
    store %5, %1, align 4
    %6 = load %1 : s32i, align 4
    %7 = inc %6 : s32i [nsw]
    store %7, %1, align 4
    store %7, %2, align 4
    scope {
        %57 = load %1 : s32i, align 4
        %58 = const 1 : s32i
        %59 = cmp ne %57, %58 : bool
        if %59 {
            %60 = const 1 : s32i
            store %60, %0
            %61 = load %0 : s32i
            return %61
        }
        yield
    }
    scope {
        %52 = load %2 : s32i, align 4
        %53 = const 1 : s32i
        %54 = cmp ne %52, %53 : bool
        if %54 {
            %55 = const 1 : s32i
            store %55, %0
            %56 = load %0 : s32i
            return %56
        }
        yield
    }
    %8 = get_global @one : (() -> s32i)*
    %9 = call @one() : s32i [all]
    store %9, %1, align 4
    %10 = load %1 : s32i, align 4
    %11 = dec %10 : s32i [nsw]
    store %11, %1, align 4
    store %11, %2, align 4
    scope {
        %47 = load %1 : s32i, align 4
        %48 = const 0 : s32i
        %49 = cmp ne %47, %48 : bool
        if %49 {
            %50 = const 1 : s32i
            store %50, %0
            %51 = load %0 : s32i
            return %51
        }
        yield
    }
    scope {
        %42 = load %2 : s32i, align 4
        %43 = const 0 : s32i
        %44 = cmp ne %42, %43 : bool
        if %44 {
            %45 = const 1 : s32i
            store %45, %0
            %46 = load %0 : s32i
            return %46
        }
        yield
    }
    %12 = get_global @zero : (() -> s32i)*
    %13 = call @zero() : s32i [all]
    store %13, %1, align 4
    %14 = load %1 : s32i, align 4
    %15 = inc %14 : s32i [nsw]
    store %15, %1, align 4
    store %14, %2, align 4
    scope {
        %37 = load %1 : s32i, align 4
        %38 = const 1 : s32i
        %39 = cmp ne %37, %38 : bool
        if %39 {
            %40 = const 1 : s32i
            store %40, %0
            %41 = load %0 : s32i
            return %41
        }
        yield
    }
    scope {
        %32 = load %2 : s32i, align 4
        %33 = const 0 : s32i
        %34 = cmp ne %32, %33 : bool
        if %34 {
            %35 = const 1 : s32i
            store %35, %0
            %36 = load %0 : s32i
            return %36
        }
        yield
    }
    %16 = get_global @one : (() -> s32i)*
    %17 = call @one() : s32i [all]
    store %17, %1, align 4
    %18 = load %1 : s32i, align 4
    %19 = dec %18 : s32i [nsw]
    store %19, %1, align 4
    store %18, %2, align 4
    scope {
        %27 = load %1 : s32i, align 4
        %28 = const 0 : s32i
        %29 = cmp ne %27, %28 : bool
        if %29 {
            %30 = const 1 : s32i
            store %30, %0
            %31 = load %0 : s32i
            return %31
        }
        yield
    }
    scope {
        %22 = load %2 : s32i, align 4
        %23 = const 1 : s32i
        %24 = cmp ne %22, %23 : bool
        if %24 {
            %25 = const 1 : s32i
            store %25, %0
            %26 = load %0 : s32i
            return %26
        }
        yield
    }
    %20 = const 0 : s32i
    store %20, %0
    %21 = load %0 : s32i
    return %21
}
