tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00033.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00033.c" (c, x86_64-unknown-linux-gnu)
global g : s32i = 0 [external, default, align 4, dso_local]

fn effect() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %71 = alloca s32i, "__retval", align 4
    %72 = const 1 : s32i
    %73 = get_global @g : s32i*
    store %72, %73, align 4
    %74 = const 1 : s32i
    store %74, %71
    %75 = load %71 : s32i
    return %75
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "x", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 0 : s32i
    %4 = get_global @g : s32i*
    store %3, %4, align 4
    %5 = const 0 : s32i
    store %5, %1, align 4
    scope {
        %62 = load %1 : s32i, align 4
        %63 = cast(int_to_bool) %62 : bool
        %64 = ternary %63 ? { : bool
            %68 = get_global @effect : (() -> s32i)*
            %69 = call @effect() : s32i [all]
            %70 = cast(int_to_bool) %69 : bool
            yield %70
        } : {
            %67 = const #false : bool
            yield %67
        }
        if %64 {
            %65 = const 1 : s32i
            store %65, %0
            %66 = load %0 : s32i
            return %66
        }
        yield
    }
    scope {
        %57 = get_global @g : s32i*
        %58 = load %57 : s32i, align 4
        %59 = cast(int_to_bool) %58 : bool
        if %59 {
            %60 = const 2 : s32i
            store %60, %0
            %61 = load %0 : s32i
            return %61
        }
        yield
    }
    %6 = const 1 : s32i
    store %6, %1, align 4
    scope {
        %42 = load %1 : s32i, align 4
        %43 = cast(int_to_bool) %42 : bool
        %44 = ternary %43 ? { : bool
            %54 = get_global @effect : (() -> s32i)*
            %55 = call @effect() : s32i [all]
            %56 = cast(int_to_bool) %55 : bool
            yield %56
        } : {
            %53 = const #false : bool
            yield %53
        }
        if %44 {
            scope {
                %47 = get_global @g : s32i*
                %48 = load %47 : s32i, align 4
                %49 = const 1 : s32i
                %50 = cmp ne %48, %49 : bool
                if %50 {
                    %51 = const 3 : s32i
                    store %51, %0
                    %52 = load %0 : s32i
                    return %52
                }
                yield
            }
            yield
        } else {
            %45 = const 4 : s32i
            store %45, %0
            %46 = load %0 : s32i
            return %46
        }
        yield
    }
    %7 = const 0 : s32i
    %8 = get_global @g : s32i*
    store %7, %8, align 4
    %9 = const 1 : s32i
    store %9, %1, align 4
    scope {
        %28 = load %1 : s32i, align 4
        %29 = cast(int_to_bool) %28 : bool
        %30 = ternary %29 ? { : bool
            %41 = const #true : bool
            yield %41
        } : {
            %38 = get_global @effect : (() -> s32i)*
            %39 = call @effect() : s32i [all]
            %40 = cast(int_to_bool) %39 : bool
            yield %40
        }
        if %30 {
            scope {
                %33 = get_global @g : s32i*
                %34 = load %33 : s32i, align 4
                %35 = cast(int_to_bool) %34 : bool
                if %35 {
                    %36 = const 5 : s32i
                    store %36, %0
                    %37 = load %0 : s32i
                    return %37
                }
                yield
            }
            yield
        } else {
            %31 = const 6 : s32i
            store %31, %0
            %32 = load %0 : s32i
            return %32
        }
        yield
    }
    %10 = const 0 : s32i
    store %10, %1, align 4
    scope {
        %13 = load %1 : s32i, align 4
        %14 = cast(int_to_bool) %13 : bool
        %15 = ternary %14 ? { : bool
            %27 = const #true : bool
            yield %27
        } : {
            %24 = get_global @effect : (() -> s32i)*
            %25 = call @effect() : s32i [all]
            %26 = cast(int_to_bool) %25 : bool
            yield %26
        }
        if %15 {
            scope {
                %18 = get_global @g : s32i*
                %19 = load %18 : s32i, align 4
                %20 = const 1 : s32i
                %21 = cmp ne %19, %20 : bool
                if %21 {
                    %22 = const 7 : s32i
                    store %22, %0
                    %23 = load %0 : s32i
                    return %23
                }
                yield
            }
            yield
        } else {
            %16 = const 8 : s32i
            store %16, %0
            %17 = load %0 : s32i
            return %17
        }
        yield
    }
    %11 = const 0 : s32i
    store %11, %0
    %12 = load %0 : s32i
    return %12
}
