tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00036.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00036.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "x", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 0 : s32i
    store %3, %1, align 4
    %4 = const 2 : s32i
    %5 = load %1 : s32i, align 4
    %6 = add %5, %4 : s32i [nsw]
    store %6, %1, align 4
    %7 = const 2 : s32i
    %8 = load %1 : s32i, align 4
    %9 = add %8, %7 : s32i [nsw]
    store %9, %1, align 4
    scope {
        %28 = load %1 : s32i, align 4
        %29 = const 4 : s32i
        %30 = cmp ne %28, %29 : bool
        if %30 {
            %31 = const 1 : s32i
            store %31, %0
            %32 = load %0 : s32i
            return %32
        }
        yield
    }
    %10 = const 1 : s32i
    %11 = load %1 : s32i, align 4
    %12 = sub %11, %10 : s32i [nsw]
    store %12, %1, align 4
    scope {
        %23 = load %1 : s32i, align 4
        %24 = const 3 : s32i
        %25 = cmp ne %23, %24 : bool
        if %25 {
            %26 = const 2 : s32i
            store %26, %0
            %27 = load %0 : s32i
            return %27
        }
        yield
    }
    %13 = const 2 : s32i
    %14 = load %1 : s32i, align 4
    %15 = mul %14, %13 : s32i [nsw]
    store %15, %1, align 4
    scope {
        %18 = load %1 : s32i, align 4
        %19 = const 6 : s32i
        %20 = cmp ne %18, %19 : bool
        if %20 {
            %21 = const 3 : s32i
            store %21, %0
            %22 = load %0 : s32i
            return %22
        }
        yield
    }
    %16 = const 0 : s32i
    store %16, %0
    %17 = load %0 : s32i
    return %17
}
